cluster/apps/decalweb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: decalweb
  namespace: decalweb
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    ocf.berkeley.edu/flux: decalweb
